# mINI-lib

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
.github/workflows/: cmake-multi-platform.yml
include/ini/: Config.h  Deserializable.h  DeserializeError.h  EOFError.h  Exception.h  Serializable.h  SerializeError.h  deserialize.h  serialize.h
src/: Config.h  Deserializable.h  INIFile.cpp  INIFile.h  Serializable.h  deserialize.cpp  deserialize.h  serialize.cpp  serialize.h
test/: CMakeLists.txt  testDeserializable.cpp  testDeserialize.cpp  testSerializable.cpp  testSerialize.cpp  testSplit.cpp  testTrim.cpp  testUtils.cpp
utilstr/: CMakeLists.txt
utilstr/include/: trim.h
utilstr/include/utilstr/: split.h  trim.h
utilstr/src/: split.cpp  trim.cpp
